--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DB_SSL=false
 NETWORK=mainnet
 
 # Rootstock RPC Endpoint
-ROOTSTOCK_RPC=https://public-node.rsk.co
+ROOTSTOCK_RPC=https://rpc.rootstock.io
 
 # Start block for indexing
 START_BLOCK=6000000
