--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,8 @@ DB_SSL=false
 NETWORK=mainnet
 
 # Rootstock RPC Endpoint
-ROOTSTOCK_RPC=https://rpc.rootstock.io
+# Get your API key from: https://rpc.rootstock.io/
+ROOTSTOCK_RPC=https://rpc.rootstock.io/<YOUR_API_KEY>
 
 # Start block for indexing
 START_BLOCK=6000000
